--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
     <nav class="navbar">
         <div class="brand-name">Credify</div>
       </nav>
-  <h1>Enter Your Information For Extra Credit</h1>
+  <h1 style="text-align: center;">Enter Your Info For Extra Credit</h1>
   <div class="input-container">
-    <input type="text" id="name" placeholder="Enter a your first and last name..." required>
-    <input type="email" id="email" placeholder="Enter a your school email..." required>
-    <button id="submitButton">Submit</button>
+    <input type="text" id="userNumber" placeholder="Enter a your first and last name..." required>
+    <input type="text" id="userNumbers" placeholder="Enter your grade..." required>
+    <input type="text" id="userNumbers" placeholder="Enter your school email..." required>
+    <button id="guessButton">Submit</button>
   </div>
-  <div class="virus-container">
-        <p id="virusText"></p>
+  <div class="guess-container">
+        <h1 id="guessText"></h1>
   </div>
   
   <div id="loading-container"></div>
